Change executeCommand method to print error stream to console